fixed navigation center on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@ a {
   margin-left: 10px; }
 
 .nav__item {
-  padding: 15px 150px;
-  margin: 10px;
+  padding: 7px;
+  margin: 10px auto;
   text-align: center;
   list-style: none; }
   .nav__item:hover {
@@ -250,7 +250,7 @@ a {
 
 .nav {
   padding: 0;
-  text-align: center; }
+  align-content: center; }
 
 @media screen and (min-width: 769px) {
   .nav__item {
