--- a/scss/utilities/_placeholders.scss
+++ b/scss/utilities/_placeholders.scss
@@ -17,8 +17,8 @@
     margin-left: 10px;
 }
 %nav-items {
-    padding: 15px 150px;
-    margin: 10px;
+    padding: 7px;
+    margin: 10px auto;
     text-align: center;
     list-style: none; 
         &:hover {
